# subnautica2-mods

./: .gitignore  CMakeLists.txt  README.md
mods/cpp/CustomCraft/: CMakeLists.txt  mod.manifest
mods/cpp/CustomCraft/src/: CraftHook.cpp  CraftHook.hpp  Items.hpp  RecipeBuilder.hpp  main.cpp
mods/cpp/ExampleMod/: CMakeLists.txt  mod.manifest
mods/cpp/ExampleMod/src/: main.cpp
mods/cpp/InfiniteHealth/: CMakeLists.txt  mod.manifest
mods/cpp/InfiniteHealth/src/: main.cpp
mods/cpp/InfiniteOxygen/: CMakeLists.txt  mod.manifest
mods/cpp/InfiniteOxygen/src/: main.cpp
mods/lua/ExampleLuaMod/: mod.manifest
mods/lua/ExampleLuaMod/Scripts/: main.lua
mods/lua/InfiniteHealth/: mod.manifest
mods/lua/InfiniteHealth/Scripts/: main.lua
mods/lua/SpeedBoost/: mod.manifest
mods/lua/SpeedBoost/Scripts/: main.lua
scripts/: build.bat  fetch_ue4ss.bat  install_mod.bat
shared/include/: SN2Helpers.hpp
